<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/hart.numericsolver"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:layout_alignParentEnd="false"
    android:layout_centerInParent="true"
    android:layout_gravity="center"
    android:layout_margin="@dimen/default_gap"
    android:columnCount="@integer/layout_grid_column_count"
    android:columnOrderPreserved="true"
    android:orientation="vertical"
    android:rowCount="@integer/layout_grid_row_count"
    android:rowOrderPreserved="true"
    android:useDefaultMargins="true"
    tools:context=".NumericSolver" >

    <Button
        android:id="@+id/restartButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:layout_gravity="top"
        app:layout_column="2"
        app:layout_columnSpan="4"
        app:layout_gravity="fill_horizontal"
        app:layout_row="9"
        app:layout_rowSpan="1"
        android:text="@string/restart"
        android:textSize="@dimen/textSize" />

    <Button 
        android:id="@+id/skipButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:layout_gravity="top"
        app:layout_column="2"
        app:layout_columnSpan="4"
        app:layout_gravity="fill_horizontal"
        app:layout_row="10"
        app:layout_rowSpan="1"
        android:text="@string/skip"
        android:textSize="@dimen/textSize" />

    <TextView
        android:id="@+id/gamesCompleted"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        app:layout_column="1"
        app:layout_columnSpan="3"
        app:layout_gravity="fill_horizontal"
        app:layout_row="2"
        android:text="@string/gamesCompleted"
        android:textSize="@dimen/textSize" />
    
    <TextView
        android:id="@+id/numGames"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        app:layout_column="4"
        app:layout_columnSpan="3"
        app:layout_gravity="fill_horizontal"
        app:layout_row="2"
        android:text="@string/numGames"
        android:textSize="@dimen/textSize" />

    <TextView
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="@dimen/numberDim"
        android:id="@+id/pt11"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        app:layout_column="1"
        app:layout_columnSpan="1"
        app:layout_gravity="left"
        app:layout_row="3"
        app:layout_rowSpan="1" />

    <TextView
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="@dimen/numberDim"
        android:id="@+id/pt12"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        app:layout_column="2"
        app:layout_columnSpan="1"
        app:layout_gravity="left"
        app:layout_row="3"
        app:layout_rowSpan="1"/>

    <TextView
        android:gravity="center"
        android:id="@+id/pt13"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        app:layout_column="3"
        app:layout_columnSpan="1"
        app:layout_gravity="left"
        app:layout_row="3"
        app:layout_rowSpan="1"
        android:text="@string/zero"
        android:textAlignment="center"
        android:textSize="@dimen/numberDim" />

    <TextView
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="@dimen/numberDim"
        android:id="@+id/pt14"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        app:layout_column="4"
        app:layout_columnSpan="1"
        app:layout_gravity="left"
        app:layout_row="3"
        app:layout_rowSpan="1"/>

    <TextView
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="@dimen/numberDim"
        android:id="@+id/pt15"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        app:layout_column="5"
        app:layout_columnSpan="1"
        app:layout_gravity="left"
        app:layout_row="3"
        app:layout_rowSpan="1" />

    <TextView
        android:id="@+id/pt16"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        app:layout_column="6"
        app:layout_columnSpan="1"
        app:layout_gravity="left"
        app:layout_row="3"
        app:layout_rowSpan="1"
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="@dimen/numberDim" />

    <TextView
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="@dimen/numberDim"
        android:id="@+id/pt21"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        app:layout_column="1"
        app:layout_columnSpan="1"
        app:layout_gravity="left"
        app:layout_row="4"
        app:layout_rowSpan="1" />

    <TextView
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="@dimen/numberDim"
        android:id="@+id/pt22"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        app:layout_column="2"
        app:layout_columnSpan="1"
        app:layout_gravity="left"
        app:layout_row="4"
        app:layout_rowSpan="1" />

    <TextView
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="@dimen/numberDim"
        android:id="@+id/pt23"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        app:layout_column="3"
        app:layout_columnSpan="1"
        app:layout_gravity="left"
        app:layout_row="4"
        app:layout_rowSpan="1" />

    <TextView
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="@dimen/numberDim"
        android:id="@+id/pt24"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        app:layout_column="4"
        app:layout_columnSpan="1"
        app:layout_gravity="left"
        app:layout_row="4"
        app:layout_rowSpan="1" />

    <TextView
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="@dimen/numberDim"
        android:id="@+id/pt25"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        app:layout_column="5"
        app:layout_columnSpan="1"
        app:layout_gravity="left"
        app:layout_row="4"
        app:layout_rowSpan="1" />

    <TextView
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="@dimen/numberDim"
        android:id="@+id/pt26"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        app:layout_column="6"
        app:layout_columnSpan="1"
        app:layout_gravity="left"
        app:layout_row="4"
        app:layout_rowSpan="1" />

    <TextView
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="@dimen/numberDim"
        android:id="@+id/pt31"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        app:layout_column="1"
        app:layout_columnSpan="1"
        app:layout_gravity="left"
        app:layout_row="5"
        app:layout_rowSpan="1" />

    <TextView
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="@dimen/numberDim"
        android:id="@+id/pt32"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        app:layout_column="2"
        app:layout_columnSpan="1"
        app:layout_gravity="left"
        app:layout_row="5"
        app:layout_rowSpan="1" />

    <TextView
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="@dimen/numberDim"
        android:id="@+id/pt33"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        app:layout_column="3"
        app:layout_columnSpan="1"
        app:layout_gravity="left"
        app:layout_row="5"
        app:layout_rowSpan="1"/>

    <TextView
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="@dimen/numberDim"
        android:id="@+id/pt34"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        app:layout_column="4"
        app:layout_columnSpan="1"
        app:layout_gravity="left"
        app:layout_row="5"
        app:layout_rowSpan="1" />

    <TextView
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="@dimen/numberDim"
        android:id="@+id/pt35"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        app:layout_column="5"
        app:layout_columnSpan="1"
        app:layout_gravity="left"
        app:layout_row="5"
        app:layout_rowSpan="1" />

    <TextView
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="@dimen/numberDim"
        android:id="@+id/pt36"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        app:layout_column="6"
        app:layout_columnSpan="1"
        app:layout_gravity="left"
        app:layout_row="5"
        app:layout_rowSpan="1" />

    <TextView
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="@dimen/numberDim"
        android:id="@+id/pt41"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        app:layout_column="1"
        app:layout_columnSpan="1"
        app:layout_gravity="left"
        app:layout_row="6"
        app:layout_rowSpan="1"/>

    <TextView
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="@dimen/numberDim"
        android:id="@+id/pt42"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        app:layout_column="2"
        app:layout_columnSpan="1"
        app:layout_gravity="left"
        app:layout_row="6"
        app:layout_rowSpan="1" />

    <TextView
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="@dimen/numberDim"
        android:id="@+id/pt43"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        app:layout_column="3"
        app:layout_columnSpan="1"
        app:layout_gravity="left"
        app:layout_row="6"
        app:layout_rowSpan="1" />

    <TextView
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="@dimen/numberDim"
        android:id="@+id/pt44"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        app:layout_column="4"
        app:layout_columnSpan="1"
        app:layout_gravity="left"
        app:layout_row="6"
        app:layout_rowSpan="1"/>

    <TextView
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="@dimen/numberDim"
        android:id="@+id/pt45"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        app:layout_column="5"
        app:layout_columnSpan="1"
        app:layout_gravity="left"
        app:layout_row="6"
        app:layout_rowSpan="1" />

    <TextView
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="@dimen/numberDim"
        android:id="@+id/pt46"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        app:layout_column="6"
        app:layout_columnSpan="1"
        app:layout_gravity="left"
        app:layout_row="6"
        app:layout_rowSpan="1" />

    <TextView
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="@dimen/numberDim"
        android:id="@+id/pt51"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        app:layout_column="1"
        app:layout_columnSpan="1"
        app:layout_gravity="left"
        app:layout_row="7"
        app:layout_rowSpan="1" />

    <TextView
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="@dimen/numberDim"
        android:id="@+id/pt52"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        app:layout_column="2"
        app:layout_columnSpan="1"
        app:layout_gravity="left"
        app:layout_row="7"
        app:layout_rowSpan="1" />

    <TextView
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="@dimen/numberDim"
        android:id="@+id/pt53"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        app:layout_column="3"
        app:layout_columnSpan="1"
        app:layout_gravity="left"
        app:layout_row="7"
        app:layout_rowSpan="1"/>

    <TextView
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="@dimen/numberDim"
        android:id="@+id/pt54"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        app:layout_column="4"
        app:layout_columnSpan="1"
        app:layout_gravity="left"
        app:layout_row="7"
        app:layout_rowSpan="1" />

    <TextView
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="@dimen/numberDim"
        android:id="@+id/pt55"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        app:layout_column="5"
        app:layout_columnSpan="1"
        app:layout_gravity="left"
        app:layout_row="7"
        app:layout_rowSpan="1" />

    <TextView
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="@dimen/numberDim"
        android:id="@+id/pt56"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        app:layout_column="6"
        app:layout_columnSpan="1"
        app:layout_gravity="left"
        app:layout_row="7"
        app:layout_rowSpan="1" />

    <TextView
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="@dimen/numberDim"
        android:id="@+id/pt61"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        app:layout_column="1"
        app:layout_columnSpan="1"
        app:layout_gravity="left"
        app:layout_row="8"
        app:layout_rowSpan="1"/>

    <TextView
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="@dimen/numberDim"
        android:id="@+id/pt62"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        app:layout_column="2"
        app:layout_columnSpan="1"
        app:layout_gravity="left"
        app:layout_row="8"
        app:layout_rowSpan="1" />

    <TextView
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="@dimen/numberDim"
        android:id="@+id/pt63"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        app:layout_column="3"
        app:layout_columnSpan="1"
        app:layout_gravity="left"
        app:layout_row="8"
        app:layout_rowSpan="1" />

    <TextView
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="@dimen/numberDim"
        android:id="@+id/pt64"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        app:layout_column="4"
        app:layout_columnSpan="1"
        app:layout_gravity="left"
        app:layout_row="8"
        app:layout_rowSpan="1" />

    <TextView
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="@dimen/numberDim"
        android:id="@+id/pt65"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        app:layout_column="5"
        app:layout_columnSpan="1"
        app:layout_gravity="left"
        app:layout_row="8"
        app:layout_rowSpan="1" />

    <TextView
        android:gravity="center"
        android:text="@string/zero" 
        android:textSize="@dimen/numberDim" 
        android:id="@+id/pt66"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        app:layout_column="6"
        app:layout_columnSpan="1"
        app:layout_gravity="left"
        app:layout_row="8"
        app:layout_rowSpan="1"/>

    <TextView
        android:id="@+id/instructions"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        app:layout_column="1"
        app:layout_columnSpan="6"
        app:layout_gravity="fill_horizontal"
        app:layout_row="1"
        android:text="@string/deviously"
        android:textSize="@dimen/textSize" />

</android.support.v7.widget.GridLayout>